tests/12-enums.stderr
error: `Defaults` cannot be derived for enums, only structs
 --> $DIR/12-enums.rs:4:6
  |
4 | enum Foo {
  |      ^^^
